--- a/project -ts/index.html
+++ b/project -ts/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="flex flex-col justify-center gap-8 ">
+      <div class="flex flex-col justify-center gap-8">
         <swiper-container
           class="mySwiper w-full"
           init="false"
@@ -37,19 +37,21 @@
               alt=""
           /></swiper-slide>
         </swiper-container>
-          <div class="bottom-div flex flex-col gap-3  pb-3 font-semibold px-2">
-            <div class="font-semibold text-2xl text-center py-4"><p>Let’s fulfill your fashion needs with shoearight now!</p></div>
-            <div class="custom-pagination flex pt-4"></div>
-            <div class=" flex flex-col items-end pt-12 pb-2 px-2">
-              <button
-                id="nextSlide"
-                class="text-white w-full h-12 rounded-full bg-[#212529] border border-[#212529]"
-              >
-                <a href=""> Next </a>
-              </button>
-            </div>
+        <div class="bottom-div flex flex-col gap-3 pb-3 font-semibold px-2">
+          <div class="font-semibold text-2xl text-center py-4">
+            <p>Let’s fulfill your fashion needs with shoearight now!</p>
+          </div>
+          <div class="custom-pagination flex pt-4"></div>
+          <div class="flex flex-col items-end pt-12 pb-2 px-2">
+            <button
+              id="nextSlide"
+              class="text-white w-full h-12 rounded-full bg-[#212529] border border-[#212529]"
+            >
+              <a href=""> Next </a>
+            </button>
           </div>
         </div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
     <script defer type="module" src="/src/onboarding.ts"></script>
