--- a/project -ts/product.html
+++ b/project -ts/product.html
@@ -78,6 +78,6 @@
     </div>
 
     <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="src/mahsol.ts"></script>
+    <script type="module" src="src/product.ts"></script>
   </body>
 </html>
