add style for img in product page

--- a/project -ts/product.html
+++ b/project -ts/product.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div>
-        <img class="relative"  src="" alt="sneaker" /><a href="http://localhost:5173/signup"><img class="absolute top-2 left-2" src="img/arrow-left-short.svg" alt="" /></a>
+        <img class="relative w-full"  src="" alt="sneaker" /><a href="http://localhost:5173/signup"><img class="absolute top-2 left-2" src="img/arrow-left-short.svg" alt="" /></a>
       </div>
       <div class="flex flex-col justify-center gap-7 px-3 py-3">
         <div class="flex items-center justify-between">
